--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Run tests
       run: bundle exec rake
     - name: Run coverage
-      run: bundle exec cov
+      run: bundle exec rake cov
