--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.5', '2.7', '3.1', '3.2', '3.3', "3.4]
+        ruby-version: ['2.5', '2.7', '3.1', '3.2', '3.3', '3.4']
 
     steps:
     - uses: actions/checkout@v4
